Removed null alignmentBlocks from sams/query.
git-svn-id: svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/psu/trunk/genlib/java/crawl@15990 ee4ac58c-ac51-4696-9907-e4b3aa274f04

--- a/README
+++ b/README
@@ -64,15 +64,18 @@ OMMMMMMMMMMMMMMMMMMMMM   ,MMMMMMMMMMMMMMMMMMMMMMMMMM$      .,8MMMMMMMMMMMM   ZMM
                                         ...:?7Z8DMNDO$7=.
                                         
 ######################################################################################################
-                                         Crawl, Version 2
+                                         Crawl, Number 2.
 ######################################################################################################
 
 
                                                                                            
 More detailed documentation can be found in doc/index.html.
 
-Crawl should run "out of the box", if you use the config files below, as these all point 
-to public data,.
+Crawl should run "out of the box", if you use the config files below, as these all point to public 
+data or locally instantiated index clusters. The project is build with gradle, and includes a 
+"gradlew" executable so you don't have to download and install gradle yourself. The first build will
+take a while because it will download dependencies. 
+
 
 ##############################################
 # RUNNING OFF A CHADO DATABASE
@@ -91,14 +94,14 @@ $ ./gradlew -Pconfig=resource-chado-public.properties jettyRunWar
 
 If instead you want to try indexing a GFF file, try (assumes you're in bash) :
 
-$ gradlew build
-$ ./sh/gff2es.sh -pe resource-elasticsearch-local.properties -o '{ \
-    "ID":27, \
-    "common_name":"Pfalciparum", \
-    "genus":"Plasmodium", \
-    "species":"falciparum", \
-    "translation_table":11, \
-    "taxonID":5833 \
+$ ./gradlew build
+$ ./sh/gff2es.sh -pe resource-elasticsearch-local.properties -o '{ 
+    "ID":27, 
+    "common_name":"Pfalciparum", 
+    "genus":"Plasmodium", 
+    "species":"falciparum", 
+    "translation_table":11, 
+    "taxonID":5833 
 }'
 $ ./sh/chado2es.sh -pc resource-chado-public.properties \
     -pe resource-elasticsearch-local.properties \
