--- a/README
+++ b/README
@@ -74,8 +74,8 @@ More detailed documentation can be found in doc/index.html.
 Crawl should run "out of the box", if you use the config files below, as these all point to public 
 data or locally instantiated index clusters. The project is build with gradle, and includes a 
 "gradlew" executable so you don't have to download and install gradle yourself. The first build will
-take a while because it will download dependencies. 
-
+take a while because it will download dependencies. OSX users please note that Java build tools like 
+gradle need a properly set JAVA_HOME environmental variable.
 
 ##############################################
 # RUNNING OFF A CHADO DATABASE
@@ -103,10 +103,10 @@ $ ./sh/gff2es.sh -pe resource-elasticsearch-local.properties -o '{
     "translation_table":11, 
     "taxonID":5833 
 }'
-$ ./sh/chado2es.sh -pc resource-chado-public.properties \
-    -pe resource-elasticsearch-local.properties \
-    -r Pf3D7_01 
+$ ./sh/gff2es.sh -g src/test/resources/data/Pf3D7_01.gff.gz  \
+    -o '{"common_name":"Pfalciparum"}' \
+    -pe resource-elasticsearch-local.properties  
 $ ./gradlew -Pconfig=resource-elasticsearch-local.properties jettyRunWar
-$ ./gradlew -Pconfig=resource-elasticsearch-local.properties jettyRunWar
+
 
 
